<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".MainActivity">

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:scaleType="fitCenter"
            android:src="@drawable/contacts"
            android:padding="20dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/contacts_button" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:scaleType="fitCenter"
            android:src="@drawable/camera"
            android:padding="20dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/camera_button" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:scaleType="fitCenter"
            android:padding="20dp"
            android:src="@drawable/map"
            android:background="@android:color/transparent"
            android:contentDescription="@string/map_button" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>